<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wenxinAPI.RecipesActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-24dp">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recipeToolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"

        android:layout_marginEnd="5dp"
        android:layout_marginBottom="160dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecipeRecycleView"
        android:layout_width="411dp"
        android:layout_height="292dp"

        app:layout_constraintBottom_toTopOf="@id/enterRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.833"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/recipeToolbar"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/enterRecipe"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/recipe_hint"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/searchRecipeButton"
        app:layout_constraintStart_toStartOf="parent"


        />

    <Button
        android:id="@+id/searchRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_recipe_button"

        app:layout_constraintBottom_toBottomOf="@id/enterRecipe"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/enterRecipe" />

    <ImageView
        android:id="@+id/detailImage"

        android:layout_width="74dp"
        android:layout_height="69dp"


        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.947"
        app:layout_constraintStart_toEndOf="@id/inDeatilSuammry"
        app:layout_constraintTop_toBottomOf="@id/RecipeRecycleView"
        app:srcCompat="@drawable/recipe" />

    <TextView
        android:id="@+id/inDeatilSuammry"
        android:layout_width="318dp"
        android:layout_height="177dp"




        android:text="@string/recipe_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/detailImage" />

    <TextView
        android:id="@+id/inDetailSourceURL"
        android:layout_width="308dp"
        android:layout_height="53dp"

        android:layout_marginTop="4dp"
        android:text="@string/recipe_source_URL"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="@id/recipeSaveButton"

        app:layout_constraintEnd_toStartOf="@id/recipeSaveButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inDeatilSuammry"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/recipeSaveButton"
        android:layout_width="81dp"
        android:layout_height="38dp"

        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"

        android:text="@string/recipe_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailImage" />


</androidx.constraintlayout.widget.ConstraintLayout>

