<?xml version="1.0" encoding="utf-8"?><!--
@author Wenxin Li
@Student No. 040941091
@date Mar 30, 2024
@labSecNo. 021
@purpose It manages the format for recipe details display page
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wenxinAPI.RecipeDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/recipeToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:backgroundTint="#B2FFEB3B"
        android:textSize="28sp"
        android:textStyle="bold"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/detailImage"
        android:layout_width="149dp"
        android:layout_height="113dp"
        app:layout_constraintBottom_toTopOf="@id/ScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeToolbar" />

    <TextView
        android:id="@+id/text_id"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/text_id"
        app:layout_constraintBottom_toTopOf="@id/text_title"
        app:layout_constraintEnd_toStartOf="@id/detailID"
        app:layout_constraintStart_toEndOf="@id/detailImage"
        app:layout_constraintTop_toTopOf="@id/detailImage"

        />

    <TextView
        android:id="@+id/detailID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/detailTitle"
        app:layout_constraintStart_toEndOf="@id/text_id"
        app:layout_constraintTop_toTopOf="@id/detailImage"


        />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/text_title"
        app:layout_constraintBottom_toBottomOf="@id/detailImage"
        app:layout_constraintStart_toEndOf="@id/detailImage"
        app:layout_constraintTop_toBottomOf="@id/text_id" />

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="@id/detailImage"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/detailID" />


    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/inDetailSourceURL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/detailImage">

        <TextView
            android:id="@+id/inDeatilSuammry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </ScrollView>

    <TextView
        android:id="@+id/inDetailSourceURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ScrollView" />

    <Button
        android:id="@+id/recipeSaveButton"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:backgroundTint="#E6D435"
        android:text="@string/recipe_save"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/recipeRemoveButton"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inDetailSourceURL" />

    <Button
        android:id="@+id/recipeRemoveButton"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:backgroundTint="#E6D435"
        android:text="@string/recipe_remove"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/recipeSaveButton"
        app:layout_constraintTop_toBottomOf="@id/inDetailSourceURL" />

</androidx.constraintlayout.widget.ConstraintLayout>